--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body class="manrope-font">
    <section class="grid grid-cols-1 md:grid-cols-2 container border-2 mx-auto">
     <div class="banner-left space-y-[30px]">
-        <h2 class="text-[80px] font-bold">It's good <br>
+        <h2 class=" text-3xl md:text-[80px] font-bold">It's good <br>
 tea time at The <br> Tea House</h2>
 <p class="p-color">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.</p>
 <button class="py-2 px-4 rounded-md text-white font-semibold bg-linear-to-r from-[#FF8938] to-[#FF0000] ">Explore More <span class="-rotate-45 inline-block"><i class="fa-solid fa-arrow-right"></i></span></button>
@@ -20,7 +20,7 @@ tea time at The <br> Tea House</h2>
     <div class="banner-right bg-amber-600 flex justify-end items-end relative ">
         <img src="./images/banner.png" alt="">
 
-        <div class="bg-white rounded-2xl shadow-2xl gap-2 flex justify-center items-center absolute bottom-4 left-50 h-[80px] w-[250px] py-[25px] px-[15px]">
+        <div class="bg-white rounded-2xl shadow-2xl gap-2 flex justify-center items-center absolute bottom-4 left-20 h-[80px] w-[250px] py-[25px] px-[15px]">
             <img src="./images/star-rating.png" alt="">
             <div>
                 <h2 class="text-3xl font-extrabold">
