--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body class="manrope-font">
    <section class="grid grid-cols-1 md:grid-cols-2 container border-2 mx-auto">
-    <div class="banner-left space-y-[30px]">
+    <div class="banner-left space-y-[30px] mx-auto text-center md:text-left py-8 ">
         <h2 class=" text-3xl md:text-[80px] font-bold">It's good <br>
 tea time at The <br> Tea House</h2>
 <p class="p-color">Tea and Botanical Solutions Supplier Give Optimum Satisfaction To Your Taste Buds.</p>
@@ -31,6 +31,38 @@ tea time at The <br> Tea House</h2>
         </div>
 
     </div>
+   </section>
+
+   <section class="container mx-auto my-[90px] border-2">
+    <div class="text-center max-w-[65%] mx-auto">
+        <h2 class="md:text-5xl text-3xl font-extrabold">Our Featured Products</h2>
+        <p class="p-color ">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+    </div>
+
+    <div class="featured-card-parent grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-4">
+        <div class="mx-auto bg-linear-to-r from-white to-gray-200 shadow-2xl rounded-2xl p-7 text-center">
+            <img src="./images/tea-1.png" class="py-4 px-4 mx-auto" alt="">
+            <h2 class="font-semibold text-xl">Milk Tea</h2>
+            <p class="p-color text-sm my-2">Creamer could be replaced by fresh milk</p>
+        </div>
+        <div class="mx-auto bg-linear-to-r from-white to-gray-200 shadow-2xl rounded-2xl p-7 text-center">
+            <img src="./images/tea-2.png" class="py-4 px-4 mx-auto" alt="">
+            <h2 class="font-semibold text-xl">Black Tea</h2>
+            <p class="p-color text-sm my-2">Creamer could be replaced by fresh milk</p>
+        </div>
+        <div class="mx-auto bg-linear-to-r from-white to-gray-200 shadow-2xl rounded-2xl p-7 text-center">
+            <img src="./images/tea-3.png" class="py-4 px-4 mx-auto" alt="">
+            <h2 class="font-semibold text-xl">Lemon Tea</h2>
+            <p class="p-color text-sm my-2">Creamer could be replaced by fresh milk</p>
+        </div>
+        <div class="mx-auto bg-linear-to-r from-white to-gray-200 shadow-2xl rounded-2xl p-7 text-center">
+            <img src="./images/tea-4.png" class="py-4 px-4 mx-auto" alt="">
+            <h2 class="font-semibold text-xl">Green Tea</h2>
+            <p class="p-color text-sm my-2">Creamer could be replaced by fresh milk</p>
+        </div>
+        
+    </div>
+    
    </section>
 </body>
 </html>
