--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     <link rel="stylesheet" href="./style/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="./tailwind.css">
 
 </head>
 <body class="manrope-font">
@@ -20,13 +21,13 @@ tea time at The <br> Tea House</h2>
     <div class="banner-right bg-amber-600 flex justify-end items-end relative ">
         <img src="./images/banner.png" alt="">
 
-        <div class="bg-white rounded-2xl shadow-2xl gap-2 flex justify-center items-center absolute bottom-4 left-20 h-[80px] w-[250px] py-[25px] px-[15px]">
-            <img src="./images/star-rating.png" alt="">
+        <div class="bg-white rounded-2xl gap-2 shadow-2xl flex justify-center items-center absolute bottom-4 left-20 md:h-[80px] md:w-[250px] w-[160px] h-[50px] py-[25px] px-[15px]">
+            <img src="./images/star-rating.png" class="size-8 md:size-auto" alt="">
             <div>
-                <h2 class="text-3xl font-extrabold">
+                <h2 class="md:text-3xl text-sm font-extrabold">
                     5.00
                 </h2>
-                <p class="p-color text-[16px] font-semibold">Trust Pilot Ratings</p>
+                <p class="p-color md:text-[16px] text-[10px] font-semibold">Trust Pilot Ratings</p>
             </div>
         </div>
 
@@ -35,11 +36,11 @@ tea time at The <br> Tea House</h2>
 
    <section class="container mx-auto my-[90px] border-2">
     <div class="text-center max-w-[65%] mx-auto">
-        <h2 class="md:text-5xl text-3xl font-extrabold">Our Featured Products</h2>
-        <p class="p-color ">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+        <h2 class="md:text-5xl text-3xl font-extrabold pb-4">Our Featured Products</h2>
+        <p class="p-color pb-8 ">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
     </div>
 
-    <div class="featured-card-parent grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-4">
+    <div class="featured-card-parent grid grid-cols-1 sm:grid-cols-2 md:grid-cols-4 gap-4 ">
         <div class="mx-auto bg-linear-to-r from-white to-gray-200 shadow-2xl rounded-2xl p-7 text-center">
             <img src="./images/tea-1.png" class="py-4 px-4 mx-auto" alt="">
             <h2 class="font-semibold text-xl">Milk Tea</h2>
@@ -63,6 +64,26 @@ tea time at The <br> Tea House</h2>
         
     </div>
     
+   </section>
+
+   <section class="container mx-auto gap-6 grid md:grid-cols-2 grid-cols-1 mb-[90px] ">
+    <div class="card-left gap-[30px] border-amber-400 grid grid-cols-2 grid-rows-3 ">
+        <div class=" bg-linear-to-r from-[#FF0000] to-[#FF8938] opacity-10  shadow-2xl rounded-md"></div>
+        <div class=" bg-[#e6a52327]  shadow-2xl row-span-2 flex justify-center items-center rounded-md"><img src="./images/fresh-1.png"  alt=""></div>
+        <div class=" bg-[#58763928]  shadow-2xl row-span-2 flex justify-center items-center rounded-md"><img src="./images/fresh-2.png"  alt=""></div>
+        <div class=" bg-linear-to-r from-[#D9D9D9] to-[#ffffff00]  shadow-2xl rounded-md"></div>
+    </div>
+
+    <div class="card-right space-y-4 py-4">
+        <h2 class="md:text-[45px] font-extrabold text-3xl">Great Tea, Freshly Presented</h2>
+        <p class="p-color">The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its custoers  because of good words of mouth and unique customized service orginated from Taiwan.</p>
+        <h3 class="text-2xl font-bold">Unique Taste</h3>
+        <p class="p-color">A Unique and different style from other teapots gives a luxurious and minimalist impression</p>
+        <h3 class="text-2xl font-bold">Premium Quality</h3>
+        <p class="p-color">Premium Quality that makes tea more elegant and more durable when you use it.</p>
+
+    </div>
+
    </section>
 </body>
 </html>
