meet section add

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 </head>
 <body class="manrope-font">
-   <section class="grid grid-cols-1 md:grid-cols-2 container border-2 mx-auto">
+   <section class="grid grid-cols-1 md:grid-cols-2 container mx-auto">
     <div class="banner-left space-y-[30px] mx-auto text-center md:text-left py-8 ">
         <h2 class=" text-3xl md:text-[80px] font-bold">It's good <br>
 tea time at The <br> Tea House</h2>
@@ -34,7 +34,7 @@ tea time at The <br> Tea House</h2>
     </div>
    </section>
 
-   <section class="container mx-auto my-[90px] border-2">
+   <section class="container mx-auto my-[90px]">
     <div class="text-center max-w-[65%] mx-auto">
         <h2 class="md:text-5xl text-3xl font-extrabold pb-4">Our Featured Products</h2>
         <p class="p-color pb-8 ">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
@@ -67,14 +67,14 @@ tea time at The <br> Tea House</h2>
    </section>
 
    <section class="container mx-auto gap-6 grid md:grid-cols-2 grid-cols-1 mb-[90px] ">
-    <div class="card-left gap-[30px] border-amber-400 grid grid-cols-2 grid-rows-3 ">
+    <div class="px-10 card-left gap-[30px] border-amber-400 grid grid-cols-2 grid-rows-3 ">
         <div class=" bg-linear-to-r from-[#FF0000] to-[#FF8938] opacity-10  shadow-2xl rounded-md"></div>
         <div class=" bg-[#e6a52327]  shadow-2xl row-span-2 flex justify-center items-center rounded-md"><img src="./images/fresh-1.png"  alt=""></div>
         <div class=" bg-[#58763928]  shadow-2xl row-span-2 flex justify-center items-center rounded-md"><img src="./images/fresh-2.png"  alt=""></div>
         <div class=" bg-linear-to-r from-[#D9D9D9] to-[#ffffff00]  shadow-2xl rounded-md"></div>
     </div>
 
-    <div class="card-right space-y-4 py-4">
+    <div class="card-right space-y-4 py-4 px-10">
         <h2 class="md:text-[45px] font-extrabold text-3xl">Great Tea, Freshly Presented</h2>
         <p class="p-color">The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its custoers  because of good words of mouth and unique customized service orginated from Taiwan.</p>
         <h3 class="text-2xl font-bold">Unique Taste</h3>
@@ -85,5 +85,47 @@ tea time at The <br> Tea House</h2>
     </div>
 
    </section>
+
+   <section class="container mx-auto gap-30 md:gap-8 grid md:grid-cols-2 grid-cols-1 mb-[90px] bg-gradient-to-r  from-[#FF8938] to-[#FF0000] md:p-[70px] p-0">
+    <div class="meet-section-left flex items-center  text-white">
+        <div class="space-y-8 text-center">
+            <h2 class="font-extrabold text-5xl pt-8 ">Meet Our Super Clients</h2>
+        <p class=" font-medium ">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
+        <button class="rounded-2xl bg-white py-2 px-6 font-bold"> <span class="bg-gradient-to-r from-[#FF8938] to-[#FF0000] bg-clip-text text-transparent">Show All</span></button>
+        </div>
+    </div>
+    
+    <!-- 3 card -->
+    <div class="meet-section-left md:pl-[150px] pb-20 md:pb-0 mx-auto pl-0 relative">
+        <div class="bg-white rounded-lg pl-10  md:w-[360px] w-[300px] absolute left-[10px] top-[100px] z-50">
+            <p class="p-color py-4 ">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+            <h3 class="font-bold">Ilham Yuda</h3>
+            <p class="p-color pb-3">Businessman</p>
+            <div class="absolute -top-[30px] -left-[30px] bg-white p-1 rounded-full">
+                <img src="./images/client.png" alt="">
+            </div>
+            <img src="./images/circles.png" alt="" class="absolute bottom-4 right-4">
+        </div>
+
+        <div class="bg-white rounded-lg pl-10  md:w-[360px] w-[300px] relative mb-[50px] opacity-10 ">
+            <p class="p-color py-4 ">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+            <h3 class="font-bold">Ilham Yuda</h3>
+            <p class="p-color pb-3">Businessman</p>
+            <div class="absolute -top-[30px] -left-[30px] bg-white p-1 rounded-full">
+                <img src="./images/client.png" alt="">
+            </div>
+        </div>
+
+        <div class="bg-white rounded-lg pl-10  md:w-[360px] w-[300px] relative opacity-10 ">
+            <p class="p-color py-4 ">We are providing the best and suitable home insurance services for the people who are interested to treatment</p>
+            <h3 class="font-bold">Ilham Yuda</h3>
+            <p class="p-color pb-3">Businessman</p>
+            <div class="absolute -top-[30px] -left-[30px] bg-white p-1 rounded-full">
+                <img src="./images/client.png" alt="">
+            </div>
+        </div>
+    </div>
+   </section>
+
 </body>
 </html>
