footer section add

--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@ tea time at The <br> Tea House</h2>
 
    <section class="container mx-auto gap-30 md:gap-8 grid md:grid-cols-2 grid-cols-1 mb-[90px] bg-gradient-to-r  from-[#FF8938] to-[#FF0000] md:p-[70px] p-0">
     <div class="meet-section-left flex items-center  text-white">
-        <div class="space-y-8 text-center">
-            <h2 class="font-extrabold text-5xl pt-8 ">Meet Our Super Clients</h2>
+        <div class="space-y-8 px-10 ">
+            <h2 class="font-extrabold md:text-5xl text-3xl pt-8">Meet Our Super Clients</h2>
         <p class=" font-medium ">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable. </p>
         <button class="rounded-2xl bg-white py-2 px-6 font-bold"> <span class="bg-gradient-to-r from-[#FF8938] to-[#FF0000] bg-clip-text text-transparent">Show All</span></button>
         </div>
@@ -126,6 +126,59 @@ tea time at The <br> Tea House</h2>
         </div>
     </div>
    </section>
+
+   <footer class="bg-linear-to-r from-[#ff000021] to-[#ff88382a] ">
+    <div class="container mx-auto">
+        <div class="flex justify-between md:p-[100px] p-[40px] ">
+            <img src="./images/cup.png" alt="">
+            <div class="flex gap-4 items-center ml-4">
+                <p class="text-neutral-700 font-bold">Ready to get strated?</p>
+                <button class="py-2 px-4 rounded-md text-white font-semibold bg-linear-to-r from-[#FF8938] to-[#FF0000] ">Get Started</span></button>
+        
+            </div>
+        </div>
+
+        <div class="border-b-blue-800 grid grid-cols-1 md:grid-cols-4 px-[40px] md:px-[100px] ">
+            <ul class="space-y-4">
+                <li class="font-semibold text-[20px]">Quick Links</li>
+                <li class="text-gray-800"><a href="">Home</a></li>
+                <li class="text-gray-800"><a href="">About Us</a></li>
+                <li class="text-gray-800"><a href="">Insurance</a></li>
+                <li class="text-gray-800"><a href="">Privacy Policy</a></li>
+            </ul>
+
+            <ul class="space-y-4">
+                <li class="font-semibold text-[20px]">Our Service</li>
+                <li class="text-gray-800"><a href="">Life Insurance</a></li>
+                <li class="text-gray-800"><a href="">Car Insurance</a></li>
+                <li class="text-gray-800"><a href="">Health Insurance</a></li>
+                <li class="text-gray-800"><a href="">House Insurance</a></li>
+            </ul>
+
+            <ul class="space-y-4">
+                <li class="font-semibold text-[20px]">Help</li>
+                <li class="text-gray-800"><a href="">FAQs</a></li>
+                <li class="text-gray-800"><a href="">Contact Us</a></li>
+            </ul>
+
+            <div class="space-y-4">
+                <h3 class="font-bold text-2xl">Subscribe to our newsletter</h3>
+                <input type="email" placeholder="Email Address" class="mt-2 border-b-2 pb-2 outline-none text-xl">
+                <button class="ml-10 py-2 px-4 rounded-md text-white font-semibold bg-linear-to-r from-[#FF8938] to-[#FF0000] "><span><i class="fa-solid fa-angle-right"></i></span></button>
+                <div class=" gap-5 flex text-2xl mt-4">
+                <span><i class="fa-brands fa-square-facebook"></i></span>
+                <span><i class="fa-brands fa-square-x-twitter"></i></span>
+                <span><i class="fa-brands fa-square-instagram"></i></span>
+                <span><i class="fa-brands fa-linkedin"></i></span>
+                </div>
+
+            </div>
+
+        </div>
+        <p class="text-center py-6 p-color ">© 2027 UIDesign.to - All rights reserved.</p>
+    </div>
+
+   </footer>
 
 </body>
 </html>
